--- a/_includes/google_analytics.html
+++ b/_includes/google_analytics.html
@@ -5,6 +5,6 @@
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-56547987-1', 'auto');
+  ga('set', 'anonymizeIp', true);
   ga('send', 'pageview');
-
 </script>
